--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -161,10 +161,15 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="TextManager.cpp" />
+    <ClCompile Include="TextureManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Object.h" />
     <ClInclude Include="Serialize.h" />
-    <ClInclude Include="Text.h" />
+    <ClInclude Include="Sprite.h" />
+    <ClInclude Include="TextManager.h" />
+    <ClInclude Include="TextureManager.h" />
   </ItemGroup>
   <ItemGroup>
     <Font Include="Roboto.ttf" />
