Split Engine code and implemented delta time

--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -162,6 +162,7 @@
     <None Include="textures.json" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Engine.cpp" />
     <ClCompile Include="json.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="TextManager.cpp" />
