--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -170,7 +170,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Enemy.h" />
-    <ClInclude Include="ObjectManager.h" />
+    <ClInclude Include="Math.h" />
+    <ClInclude Include="EnemyManager.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="json.hpp" />
     <ClInclude Include="Object.h" />
